tests/paczka1/fuzzy1/17005779.err
Error in line 6: PbbmEX A996 76,2
Error in line 12: A71 S421 73,9
Error in line 13: sgTHj1PcP A996 44,0
Error in line 8: 1gQYgB A406 95,9
Error in line 25: 1gQYgB S421 84,5
Error in line 31: NUVFnT9GI A71 38,1
Error in line 23: sgTHj1PcP S421 19,6
Error in line 14: PbbmEX A71 336,2
